[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
itertools = "0.12"
lazy_static = "1.4"
num = "0.4"
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking"] }
